<resources>
    <string name="app_name">MORTGAGE CALCULATOR</string>
    <string name="button_text_save">SAVE MY MORTGAGE CALCULATION:  </string>

    <string name="mortgage_amount">Mortgage Amount : </string>
    <string name="interest_rate">Interest Rate : </string>
    <string name="mortgage_period">Mortgage Period : </string>
    <string name="button_text_calc">CALCULATE MY MONTHLY MORTGAGE:  </string>
    <string name="output">YOUR MONTHLY PAYMENT :  </string>

    <string-array name="mortgage_terms">
        <item>15</item>
        <item>30</item>
    </string-array>

    <string-array name="property_type">
        <item>House</item>
        <item>Townhouse</item>
        <item>Condo</item>
    </string-array>

    <string name="property_name">PROPERTY TYPE :  </string>
    <string name="street_address">STREET ADDRESS : </string>
    <string name="city_name">CITY : </string>
    <string name="state_name">STATE : </string>

    <string-array name="state_list">
        <item>	Alabama	</item>
        <item>	Alaska	</item>
        <item>	Arizona	</item>
        <item>	Arkansas	</item>
        <item>	California	</item>
        <item>	Colorado	</item>
        <item>	Connecticut	</item>
        <item>	Delaware	</item>
        <item>	Florida	</item>
        <item>	Georgia	</item>
        <item>	Hawaii	</item>
        <item>	Idaho	</item>
        <item>	Illinois	</item>
        <item>	Indiana	</item>
        <item>	Iowa	</item>
        <item>	Kansas	</item>
        <item>	Kentucky	</item>
        <item>	Louisiana	</item>
        <item>	Maine	</item>
        <item>	Maryland	</item>
        <item>	Massachusetts	</item>
        <item>	Michigan	</item>
        <item>	Minnesota	</item>
        <item>	Mississippi	</item>
        <item>	Missouri	</item>
        <item>	Montana	</item>
        <item>	Nebraska	</item>
        <item>	Nevada	</item>
        <item>	New Hampshire	</item>
        <item>	New Jersey	</item>
        <item>	New Mexico	</item>
        <item>	New York	</item>
        <item>	North Carolina	</item>
        <item>	North Dakota	</item>
        <item>	Ohio	</item>
        <item>	Oklahoma	</item>
        <item>	Oregon	</item>
        <item>	Pennsylvania	</item>
        <item>	Rhode Island	</item>
        <item>	South Carolina	</item>
        <item>	South Dakota	</item>
        <item>	Tennessee	</item>
        <item>	Texas	</item>
        <item>	Utah	</item>
        <item>	Vermont	</item>
        <item>	Virginia	</item>
        <item>	Washington	</item>
        <item>	West Virginia	</item>
        <item>	Wisconsin	</item>
        <item>	Wyoming	</item>
    </string-array>

    <string name="pin_code">ZIPCODE: </string>
    <string name="loan_info">LOAN INFO (Monthly Calculated Amount): </string>
</resources>
